--- a/cursoPractFrontDev4/styles.css
+++ b/cursoPractFrontDev4/styles.css
@@ -13,6 +13,11 @@ body {
     margin: 0;
     font-family: 'Quicksand', sans-serif;
 }
+
+.inactive {
+    display: none;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -78,6 +83,10 @@ nav {
 }
 
 .desktop-menu {
+    position: absolute;
+    background: var(--white);
+    top: 60px;
+    right: 60px;
     width: 100px;
     height: auto;
     border: 1px solid var(--very-light-pink);
