--- a/cursoPractFrontDev4/styles.css
+++ b/cursoPractFrontDev4/styles.css
@@ -60,6 +60,7 @@ nav {
 }
 .navbar-email {
     color: var(--very-light-pink);
+    cursor: pointer;
     font-size: var(--sm);
     margin-right: 12px;
 }
