--- a/cursoPractFrontDev4/styles.css
+++ b/cursoPractFrontDev4/styles.css
@@ -249,6 +249,49 @@ nav {
     font-weight: bold;
 }
 
+/* Product List */
+
+.cards-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 240px);/*repeat(auto-fill es para llenar con las grid que quepan en pantalla, 300px es el tamaño de ancho del grid)*/
+    gap: 26px;
+    place-content: center; /*ayuda a alinear la grid*/
+}
+.product-card {
+    width: 240px;
+}
+.product-card img {
+    width: 240px;
+    height: 240px;
+    border-radius: 20px;
+    object-fit: cover; /*mantiende tamaño proporcional a la imagen original*/
+}
+.product-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 12px;
+}
+.product-info figure {
+    margin: 0;
+}
+.product-info figure img {
+    width: 35px;
+    height: 35px;
+}
+.product-info div p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0px;
+    margin-bottom: 4px;
+}
+.product-info div p:nth-child(2) {
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 0;
+    color: var(--very-light-pink);
+}
+
 @media (max-width: 640px) {
     .menu {
         display: block;
@@ -263,6 +306,17 @@ nav {
 
     .product-detail {
         width: 100%;
+    }
+
+    .cards-container {
+        grid-template-columns: repeat(auto-fill, 140px);
+    }
+    .product-card {
+        width: 140px;
+    }
+    .product-card img {
+        width: 140px;
+        height: 140px;
     }
 }
 @media (min-width: 641px) {
