--- a/cursoPractFrontDev4/styles.css
+++ b/cursoPractFrontDev4/styles.css
@@ -293,6 +293,71 @@ nav {
     color: var(--very-light-pink);
 }
 
+/* Product detail */
+
+.product-detail-second {
+    width: 360px;
+    padding-bottom: 24px;
+    position: absolute;
+    right: 0;
+}
+.product-detail-close {
+    background: var(--white);
+    width: 14px;
+    height: 14px;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    z-index: 2;
+    padding: 12px;
+    border-radius: 50%;
+}
+.product-detail-close:hover {
+    cursor: pointer;
+}
+.product-detail-second > img:nth-child(2){
+    width: 100%;
+    height: 360px;
+    border-radius: 0 0 20px 20px;                
+}
+.product-info {
+    margin: 24px 24px 0 24px;
+}
+.product-info p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top:  0;
+    margin-bottom: 4px;
+}
+.product-info p:nth-child(2) {
+    color: var(--very-light-pink);
+    font-size: var(--md);
+    margin-top:  0;
+    margin-bottom: 36px;
+}
+.product-info p:nth-child(3) {
+    color: var(--very-light-pink);
+    font-size: var(--sm);
+    margin-top:  0;
+    margin-bottom: 36px;
+}
+.primary-button {
+    background-color: var(--hospital-green);
+    border: none;
+    border-radius: 8px;
+    color: var(--white);
+    width: 100%;
+    height: 50px;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+}
+.add-to-cart-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media (max-width: 640px) {
     .menu {
         display: block;
@@ -305,10 +370,12 @@ nav {
         display: none;
     }
 
+    
     .product-detail-first {
         width: 100%;
     }
 
+    
     .cards-container {
         grid-template-columns: repeat(auto-fill, 140px);
     }
@@ -318,6 +385,11 @@ nav {
     .product-card img {
         width: 140px;
         height: 140px;
+    }
+    
+    
+    .product-detail-second {
+        width: 100%;
     }
 }
 @media (min-width: 641px) {
