Resolviendo conflictos en la fusion de aside en estilos con clases del mismo nombre

--- a/cursoPractFrontDev4/styles.css
+++ b/cursoPractFrontDev4/styles.css
@@ -135,7 +135,10 @@ nav {
     position: absolute;
     background: var(--white);
     top: 61px;
+    padding: 24px;
     height: 100vh;
+    left: 0;
+    width: 100%;
 }
 .mobile-menu a {
     text-decoration: none;
@@ -172,15 +175,19 @@ nav {
     padding: 0;
 }
 
-/* Aside (Product Detail) */
+/* Aside */
 
-.product-detail-first {
+aside {
     background-color: var(--white);
     width: 360px;
-    padding: 0 24px;
     box-sizing: border-box;
     position: absolute;
     right: 0;
+}
+
+/* Product detail first */
+.product-detail-first {
+    padding: 0 24px;
 }
 .title {
     font-size: var(--lg);
@@ -249,58 +256,9 @@ nav {
     font-weight: bold;
 }
 
-/* Product List */
 
-.cards-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 240px);/*repeat(auto-fill es para llenar con las grid que quepan en pantalla, 300px es el tamaño de ancho del grid)*/
-    gap: 26px;
-    place-content: center; /*ayuda a alinear la grid*/
-    margin-top: 20px;
-}
-.product-card {
-    width: 240px;
-}
-.product-card img {
-    width: 240px;
-    height: 240px;
-    border-radius: 20px;
-    object-fit: cover; /*mantiende tamaño proporcional a la imagen original*/
-}
-.product-info {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 12px;
-}
-.product-info figure {
-    margin: 0;
-}
-.product-info figure img {
-    width: 35px;
-    height: 35px;
-}
-.product-info div p:nth-child(1) {
-    font-weight: bold;
-    font-size: var(--md);
-    margin-top: 0px;
-    margin-bottom: 4px;
-}
-.product-info div p:nth-child(2) {
-    font-size: var(--sm);
-    margin-top: 0;
-    margin-bottom: 0;
-    color: var(--very-light-pink);
-}
+/* Product detail second */
 
-/* Product detail */
-
-.product-detail-second {
-    width: 360px;
-    padding-bottom: 24px;
-    position: absolute;
-    right: 0;
-}
 .product-detail-close {
     background: var(--white);
     width: 14px;
@@ -320,22 +278,22 @@ nav {
     height: 360px;
     border-radius: 0 0 20px 20px;                
 }
-.product-info {
+.product-detail-second .product-card .product-info {
     margin: 24px 24px 0 24px;
 }
-.product-info p:nth-child(1) {
+.product-card .product-info p:nth-child(1) {
     font-weight: bold;
     font-size: var(--md);
     margin-top:  0;
     margin-bottom: 4px;
 }
-.product-info p:nth-child(2) {
+.product-card .product-info p:nth-child(2) {
     color: var(--very-light-pink);
     font-size: var(--md);
     margin-top:  0;
     margin-bottom: 36px;
 }
-.product-info p:nth-child(3) {
+.product-card .product-info p:nth-child(3) {
     color: var(--very-light-pink);
     font-size: var(--sm);
     margin-top:  0;
@@ -358,6 +316,49 @@ nav {
     justify-content: center;
 }
 
+/* Product List */
+
+.cards-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 240px);/*repeat(auto-fill es para llenar con las grid que quepan en pantalla, 300px es el tamaño de ancho del grid)*/
+    gap: 26px;
+    place-content: center; /*ayuda a alinear la grid*/
+    margin-top: 20px;
+}
+.product-card {
+    width: 240px;
+}
+.product-card img {
+    width: 240px;
+    height: 240px;
+    border-radius: 20px;
+}
+.product-card .product-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 12px;
+}
+.product-card .product-info figure {
+    margin: 0;
+}
+.product-card .product-info figure img {
+    width: 35px;
+    height: 35px;
+}
+.product-card .product-info div p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0px;
+    margin-bottom: 4px;
+}
+.product-card .product-info div p:nth-child(2) {
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 0;
+    color: var(--very-light-pink);
+}
+
 @media (max-width: 640px) {
     .menu {
         display: block;
@@ -371,7 +372,7 @@ nav {
     }
 
     
-    .product-detail-first {
+    aside {
         width: 100%;
     }
 
@@ -385,11 +386,6 @@ nav {
     .product-card img {
         width: 140px;
         height: 140px;
-    }
-    
-    
-    .product-detail-second {
-        width: 100%;
     }
 }
 @media (min-width: 641px) {
